tokio-postgres/tests/derive/fail/non_string_rename_all.rs
use tokio_postgres::FromRow;

#[derive(FromRow)]
#[postgres(rename_all = 1)]
struct User {
    id: i64,
}

fn main() {}
